--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-loader": "^8.0.5",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^7.0.4",
+    "pinst": "^2.1.6",
     "script-ext-html-webpack-plugin": "^2.1.3",
     "standard": "^14.3.1",
     "webpack": "^4.28.4",
