--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,8 +11,11 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@2
+#      - name: npm install and build webpack
+#      - run: 
 
     strategy:
       matrix:
@@ -30,3 +33,12 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+      
+    - uses: actions/checkout@v2
+    - name: Analysis
+      uses: codacy/codacy-analysis-cli-action@master
+      with:
+        tool: ESLint
+        project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+        upload: true
+      
