--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x]
-        os: [ubuntu-latest, windows-2016]
+        os: [ubuntu-latest]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -30,3 +30,11 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+      
+    - uses: actions/checkout@v2
+    - name: Analysis
+      uses: codacy/codacy-analysis-cli-action@master
+      with:
+        tool: ESLint
+        project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+        upload: true
